<resources>
    <string name="app_name">Eteration Native Development Study Case</string>
    <string name="title_home">E-Market</string>
    <string name="title_basket">Basket</string>
    <string name="price_with_colon">Price:</string>
    <string name="filters_with_colon">Filters:</string>
    <string name="select_filter">Select Filter</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="no_items_available">No items available</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="complete">Complete\n</string>
    <string name="basket_is_empty">Basket is empty</string>
    <string name="product_image">Product image</string>
    <string name="favorite_button">Favorite button</string>
    <string name="search">Search</string>
    <string name="no_favorite_items">No item has been favorited yet</string>
    <string name="favorites">Favorites</string>
    <string name="currency_symbol">₺</string>
    <string name="price_format">%1$s %2$s</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="old_to_new">Old to new</string>
    <string name="new_to_old">New to old</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="sort_by">Sort By</string>
</resources>