<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/sort_by"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_old_to_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_to_new" />

        <RadioButton
            android:id="@+id/rb_new_to_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_to_old" />

        <RadioButton
            android:id="@+id/rb_price_high_to_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_high_to_low" />

        <RadioButton
            android:id="@+id/rb_price_low_to_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_low_to_high" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_apply_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2A59FE"
        android:padding="16dp"
        android:text="@string/apply_filter"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
