<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.burakcanduzcan.eterationnativedevelopmentstudycase.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.burakcanduzcan.eterationnativedevelopmentstudycase.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.burakcanduzcan.eterationnativedevelopmentstudycase.ui.product_detail.ProductDetailFragment"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productUiModel"
            app:argType="com.burakcanduzcan.eterationnativedevelopmentstudycase.model.ProductUiModel" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.burakcanduzcan.eterationnativedevelopmentstudycase.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_navigation_favorites_to_navigation_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>
</navigation>